--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install",
-    "js": "json-server --watch --port 3001 __json_server_mock__/db.json "
+    "js": "json-server __json_server_mock__/db.json --watch --port 3001 --middlewares __json_server_mock__/middleware.js"
   },
   "eslintConfig": {
     "extends": [
