--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.10",
     "antd": "^5.1.6",
     "craco-antd": "^2.0.0",
+    "dayjs": "^1.11.7",
     "eslint-config-prettier": "^8.6.0",
     "jira-dev-tool": "^1.7.61",
     "qs": "^6.11.0",
