--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "craco-antd": "^2.0.0",
     "dayjs": "^1.11.7",
     "eslint-config-prettier": "^8.6.0",
-    "jira-dev-tool": "^1.7.61",
+    "jira-dev-tool": "^1.6.59",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
