--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "^18.0.10",
     "antd": "^5.1.6",
     "craco-antd": "^2.0.0",
@@ -24,6 +25,7 @@
     "jira-dev-tool": "^1.6.59",
     "qs": "^6.11.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
