--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "craco start",
     "build": "node scripts/build.js",
     "test": "craco test",
     "eject": "react-scripts eject",
